<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".UserPanelActivity">


    <Button
        android:id="@+id/updateButton"
        android:layout_width="121dp"
        android:layout_height="57dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="212dp"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="121dp"
        android:layout_height="57dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="212dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/title"
        style="@style/TextTitlePri"
        android:layout_width="327dp"
        android:layout_height="87dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="21dp"
        android:text="@string/manageAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nameFieldUpdate"
        style="@style/TextViewUser"
        android:layout_width="373dp"
        android:layout_height="61dp"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:layout_editor_absoluteY="191dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailFieldUpdate"
        style="@style/TextViewUser"
        android:layout_width="372dp"
        android:layout_height="62dp"
        android:hint="@string/email_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameFieldUpdate"
        tools:layout_editor_absoluteY="267dp" />

    <EditText
        android:id="@+id/passwordFieldUpdate"
        style="@style/TextViewUser"
        android:layout_width="366dp"
        android:layout_height="58dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="22dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneFieldUpdate"
        tools:layout_editor_absoluteY="416dp" />

    <EditText
        android:id="@+id/phoneFieldUpdate"
        style="@style/TextViewUser"
        android:layout_width="369dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailFieldUpdate"
        tools:layout_editor_absoluteY="342dp" />

    <TextView
        android:id="@+id/invitationToSeeDataText"
        style="@style/BasicText"
        android:layout_width="374dp"
        android:layout_height="62dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="574dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="95dp"
        android:text="@string/invitationToLookAtThePokemonApi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/goToListPokemonsbutton"
        android:layout_width="90dp"
        android:layout_height="52dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="16dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>