<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignInActivity">

    <Button
        android:id="@+id/signInButton"
        style="@style/createAccount"
        android:layout_width="215dp"
        android:layout_height="64dp"
        android:background="#00FFFFFF"
        android:text="@string/signIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoLogin"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/logoLogin"
        style="@style/ImageViewLogo"
        android:layout_width="318dp"
        android:layout_height="260dp"
        android:contentDescription="@string/descriptionLogo"
        android:src="@drawable/whitebeard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        style="@style/TextTitlePri"
        android:layout_width="132dp"
        android:layout_height="45dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toTopOf="@+id/emailLoginInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoLogin"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/emailInput"
        style="@style/TextViewUser"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/phoneInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLoginInput"
        app:layout_constraintVertical_bias="0.454" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailLoginInput"
        style="@style/TextViewUser"
        android:hint="@string/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoLogin"
        app:layout_constraintVertical_bias="0.119" />

    <EditText
        android:id="@+id/inputLoginPassword"
        style="@style/TextViewUser"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneInput" />

    <Button
        android:id="@+id/signUpButton"
        style="@style/bottonsUp"
        android:layout_width="215dp"
        android:layout_height="51dp"
        android:layout_marginBottom="184dp"
        android:background="@drawable/box"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLoginPassword"
        app:layout_constraintVertical_bias="0.42" />

    <EditText
        android:id="@+id/phoneInput"
        style="@style/TextViewUser"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />


</androidx.constraintlayout.widget.ConstraintLayout>