<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/button1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/logoLogin"
        style="@style/ImageViewLogo"
        android:layout_width="460dp"
        android:layout_height="223dp"
        android:contentDescription="@string/descriptionLogo"
        android:src="@drawable/whitebeard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.202" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailLoginInput"
        style="@style/TextViewUser"
        android:hint="@string/email_address"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoLogin"
        app:layout_constraintVertical_bias="0.167" />

    <TextView
        android:id="@+id/textView"
        style="@style/TextTitlePri"
        android:layout_width="132dp"
        android:layout_height="45dp"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/emailLoginInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoLogin"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/inputLoginPassword"
        style="@style/TextViewUser"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLoginInput"
        app:layout_constraintVertical_bias="0.04"
        tools:visibility="visible" />


    <Button
        android:id="@+id/signInLoginButton"
        style="@style/bottons"
        android:layout_width="241dp"
        android:layout_height="65dp"
        android:background="@drawable/box"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLoginPassword"
        app:layout_constraintVertical_bias="0.185" />

    <Button
        android:id="@+id/singUpLink"
        style="@style/createAccount"
        android:layout_width="238dp"
        android:layout_height="78dp"
        android:background="#00FFFFFF"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoLogin"
        app:layout_constraintVertical_bias="0.952" />


</androidx.constraintlayout.widget.ConstraintLayout>